generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

enum WorkspacePlan {
  free
  pro
  business
}

enum WorkspaceRole {
  owner
  admin
  member
}

enum ProjectStatus {
  planned
  in_progress
  paused
  completed
  archived
}

enum TaskStatus {
  todo
  in_progress
  completed
  cancelled
}

enum TaskPriority {
  low
  medium
  high
  urgent
}

enum UsageResource {
  members
  projects
  tasks
  api_keys
}

model User {
  id              String    @id @default(uuid()) @db.Uuid
  email           String    @unique @db.VarChar(320)
  passwordHash    String    @db.VarChar(255)
  firstName       String    @db.VarChar(100)
  lastName        String    @db.VarChar(100)
  emailVerifiedAt DateTime? @db.Timestamptz
  createdAt       DateTime  @default(now()) @db.Timestamptz
  updatedAt       DateTime  @updatedAt @db.Timestamptz

  workspaceMembers WorkspaceMember[]
  projectMembers   ProjectMember[]
  createdProjects  Project[]         @relation("ProjectCreatedBy")
  createdTasks     Task[]            @relation("TaskCreatedBy")
  assignedTasks    Task[]            @relation("TaskAssignee")
  notifications    Notification[]
  auditLogs        AuditLog[]
  createdApiKeys   ApiKey[]          @relation("ApiKeyCreatedBy")

  @@index([email])
  @@map("users")
}

model Workspace {
  id        String        @id @default(uuid()) @db.Uuid
  name      String        @db.VarChar(150)
  slug      String        @unique @db.VarChar(150)
  plan      WorkspacePlan @default(free)
  createdAt DateTime      @default(now()) @db.Timestamptz
  updatedAt DateTime      @updatedAt @db.Timestamptz
  deletedAt DateTime?     @db.Timestamptz

  members       WorkspaceMember[]
  projects      Project[]
  tasks         Task[]
  usage         Usage[]
  notifications Notification[]
  auditLogs     AuditLog[]
  apiKeys       ApiKey[]

  @@index([slug])
  @@map("workspaces")
}

model WorkspaceMember {
  id          String        @id @default(uuid()) @db.Uuid
  workspaceId String        @db.Uuid
  userId      String        @db.Uuid
  role        WorkspaceRole @default(member)
  createdAt   DateTime      @default(now()) @db.Timestamptz
  updatedAt   DateTime      @updatedAt @db.Timestamptz

  workspace Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([workspaceId, userId])
  @@index([workspaceId])
  @@index([userId])
  @@map("workspace_members")
}

model Project {
  id          String        @id @default(uuid()) @db.Uuid
  workspaceId String        @db.Uuid
  name        String        @db.VarChar(200)
  description String?       @db.Text
  status      ProjectStatus @default(planned)
  startDate   DateTime?     @db.Date
  targetDate  DateTime?     @db.Date
  createdBy   String        @db.Uuid
  createdAt   DateTime      @default(now()) @db.Timestamptz
  updatedAt   DateTime      @updatedAt @db.Timestamptz
  deletedAt   DateTime?     @db.Timestamptz

  workspace Workspace       @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  creator   User            @relation("ProjectCreatedBy", fields: [createdBy], references: [id], onDelete: Restrict)
  members   ProjectMember[]
  tasks     Task[]

  @@index([workspaceId])
  @@index([workspaceId, status])
  @@index([workspaceId, createdAt])
  @@map("projects")
}

model ProjectMember {
  id        String   @id @default(uuid()) @db.Uuid
  projectId String   @db.Uuid
  userId    String   @db.Uuid
  createdAt DateTime @default(now()) @db.Timestamptz

  project Project @relation(fields: [projectId], references: [id], onDelete: Cascade)
  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([projectId, userId])
  @@index([projectId])
  @@index([userId])
  @@map("project_members")
}

model Task {
  id          String       @id @default(uuid()) @db.Uuid
  workspaceId String       @db.Uuid
  projectId   String       @db.Uuid
  title       String       @db.VarChar(255)
  description String?      @db.Text
  status      TaskStatus   @default(todo)
  priority    TaskPriority @default(medium)
  assigneeId  String?      @db.Uuid
  dueDate     DateTime?    @db.Date
  createdBy   String       @db.Uuid
  createdAt   DateTime     @default(now()) @db.Timestamptz
  updatedAt   DateTime     @updatedAt @db.Timestamptz
  deletedAt   DateTime?    @db.Timestamptz

  workspace Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  project   Project   @relation(fields: [projectId], references: [id], onDelete: Cascade)
  assignee  User?     @relation("TaskAssignee", fields: [assigneeId], references: [id], onDelete: SetNull)
  creator   User      @relation("TaskCreatedBy", fields: [createdBy], references: [id], onDelete: Restrict)

  @@index([workspaceId])
  @@index([projectId])
  @@index([assigneeId])
  @@index([workspaceId, status])
  @@index([projectId, status])
  @@index([dueDate])
  @@map("tasks")
}

model Usage {
  id          String        @id @default(uuid()) @db.Uuid
  workspaceId String        @db.Uuid
  resource    UsageResource
  count       BigInt        @default(0)
  periodStart DateTime      @db.Timestamptz
  periodEnd   DateTime      @db.Timestamptz
  createdAt   DateTime      @default(now()) @db.Timestamptz
  updatedAt   DateTime      @updatedAt @db.Timestamptz

  workspace Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)

  @@unique([workspaceId, resource, periodStart, periodEnd])
  @@index([workspaceId])
  @@map("usage")
}

model Notification {
  id          String    @id @default(uuid()) @db.Uuid
  workspaceId String    @db.Uuid
  userId      String    @db.Uuid
  type        String    @db.VarChar(100)
  title       String    @db.VarChar(200)
  message     String    @db.Text
  readAt      DateTime? @db.Timestamptz
  createdAt   DateTime  @default(now()) @db.Timestamptz

  workspace Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([workspaceId])
  @@index([userId, readAt])
  @@map("notifications")
}

model AuditLog {
  id           String   @id @default(uuid()) @db.Uuid
  workspaceId  String   @db.Uuid
  actorId      String?  @db.Uuid
  action       String   @db.VarChar(150)
  resourceType String   @db.VarChar(100)
  resourceId   String?  @db.Uuid
  metadata     Json?
  createdAt    DateTime @default(now()) @db.Timestamptz

  workspace Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  actor     User?     @relation(fields: [actorId], references: [id], onDelete: SetNull)

  @@index([workspaceId])
  @@index([workspaceId, createdAt])
  @@index([actorId])
  @@index([resourceType, resourceId])
  @@map("audit_logs")
}

model ApiKey {
  id          String    @id @default(uuid()) @db.Uuid
  workspaceId String    @db.Uuid
  createdBy   String    @db.Uuid
  name        String    @db.VarChar(150)
  keyPrefix   String    @db.VarChar(32)
  keyHash     String    @db.VarChar(255)
  scopes      Json
  lastUsedAt  DateTime? @db.Timestamptz
  expiresAt   DateTime? @db.Timestamptz
  revokedAt   DateTime? @db.Timestamptz
  createdAt   DateTime  @default(now()) @db.Timestamptz

  workspace Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  creator   User      @relation("ApiKeyCreatedBy", fields: [createdBy], references: [id], onDelete: Restrict)

  @@index([workspaceId])
  @@index([keyPrefix])
  @@map("api_keys")
}
